--- a/views/index.html
+++ b/views/index.html
@@ -39,7 +39,7 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+              <a class="nav-link js-scroll-trigger" href="#projects">See Demo</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
@@ -137,12 +137,8 @@
           <div class="col-md-10 col-lg-8 mx-auto text-center">
 
             <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-            <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
+            <h2 class="text-white mb-5">Contact us to learn more!</h2>
 
-            <form class="form-inline d-flex">
-              <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address...">
-              <button type="submit" class="btn btn-primary mx-auto">Subscribe</button>
-            </form>
 
           </div>
         </div>
@@ -173,7 +169,7 @@
                 <h4 class="text-uppercase m-0">Email</h4>
                 <hr class="my-4">
                 <div class="small text-black-50">
-                  <a href="#">hello@yourdomain.com</a>
+                  <a href="#">orcafollowup@mit.edu</a>
                 </div>
               </div>
             </div>
@@ -190,7 +186,7 @@
             </div>
           </div>
         </div>
-
+<!-- 
         <div class="social d-flex justify-content-center">
           <a href="#" class="mx-2">
             <i class="fab fa-twitter"></i>
@@ -201,7 +197,7 @@
           <a href="#" class="mx-2">
             <i class="fab fa-github"></i>
           </a>
-        </div>
+        </div> -->
 
       </div>
     </section>
@@ -209,7 +205,8 @@
     <!-- Footer -->
     <footer class="bg-black small text-center text-white-50">
       <div class="container">
-        Copyright &copy; Your Website 2018
+        <!-- Copyright &copy; Your Website 2018 <br> -->
+        Built at HackMIT 2018
       </div>
     </footer>
 
