--- a/views/index.html
+++ b/views/index.html
@@ -54,8 +54,8 @@
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
           <h1 class="mx-auto my-0 text-uppercase">Struck by Orca</h1>
-          <h2 class="text-white-50 mx-auto mt-2 mb-5">Followup Encounter <br> HackMIT 2018</h2>
-          <a href="#demo" class="btn btn-primary js-scroll-trigger">See demo</a>
+          <h2 class="text-white-50 mx-auto mt-2 mb-5">Followup Encounter <br> Built at HackMIT 2018</h2>
+          <a href="#myChart" class="btn btn-primary js-scroll-trigger">See demo</a>
         </div>
       </div>
     </header>
@@ -219,6 +219,7 @@
     <script src="javascripts/grayscale.min.js"></script>
 
     <!-- see if this works -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js" type="text/javascript"></script>
     <script src="javascripts/demochart.js"></script>
 
