--- a/views/index.html
+++ b/views/index.html
@@ -179,7 +179,7 @@
                 <h4 class="text-uppercase m-0">Email</h4>
                 <hr class="my-4">
                 <div class="small text-black-50">
-                  <a href="#">orcafollowup@mit.edu</a>
+                  <a href="mailto:orcafollowup@mit.edu">orcafollowup@mit.edu</a>
                 </div>
               </div>
             </div>
