--- a/public/stylesheets/grayscale.css
+++ b/public/stylesheets/grayscale.css
@@ -100,6 +100,26 @@
   background-size: cover;
 }
 
+.test { 
+    /* The image used */
+    background-image: url("../img/test.jpg");
+
+    /* Full height */
+    height: 100%; 
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    background-attachment: fixed; /*it doesn't scroll with everything else*/
+
+    /*new code*/
+/*    background-color: rgba(200,100,0,.5);*/
+background-color: rgba(46, 54, 25,.75);
+    background-blend-mode: multiply;
+}
+
 .masthead h1 {
   font-family: 'Varela Round';
   font-size: 2.5rem;
